# perpetual-futures-trading-strategy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  STRATEGY_VERIFICATION.md  docker-compose.yml  pyproject.toml  requirements.txt  v3_deep_alpha.py  v3_production_engine.py
.claude/: settings.json
config/: __init__.py  config.py
scripts/: migrate_shadow_trades.py  shadow_report.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py  optimizer.py
src/core/: __init__.py  data_buffer.py  utils.py  volatility.py
src/execution/: __init__.py  ccxt_client.py  executor.py  liquidation_feed.py  order_manager.py  ws_stream.py
src/notifications/: notifier.py
src/persistence/: trade_store.py
src/production/: __init__.py  bot.py  multi_bot.py
src/risk/: __init__.py  funding_carry.py  kill_switch.py  position_sizer.py  risk_manager.py
src/shadow/: engine.py
src/strategy/: __init__.py  engine.py  exits.py  signals.py
tests/: test_strategy.py
