[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apfts"
version = "3.0.0"
description = "APFTS v3 — Advanced Perpetual Futures Trading Strategy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.2.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.3.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
apfts-backtest = "src.backtest.engine:main"
apfts-bot      = "src.production.bot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
